# CATkS

./: .gitignore  .gitmodules  CMakeLists.txt  G_0.375.txt  README.md  raw.txt  rawA.txt  rawAboost2.txt  rawB.txt
data/: vac_trans.txt
plt/: 2dplot.py
plt/VH/: di_calc.py  di_diff_calc.py  di_plot.py  hist.py  mono_calc.py  mono_plot.py  plot.py
plt/diff/: 2H_7.xyz  plot.py  plot_multi.py  test7_2.xyz
plt/diff/multiH/: hist.py  minimage.py  plot_multi.py  time_hist.py
plt/diff/singleH/: plot.py
plt/diff/singleH/long/: plot.py
plt/dump/: test.pre.xyz  test.xyz
plt/g_init/: G_0.1.txt  G_0.15.txt  G_0.2.txt  G_0.225.txt  G_0.25.txt  G_0.275.txt  G_0.3.txt  G_0.325.txt  G_0.35.txt  G_0.375.txt  G_0.4.txt  G_0.45.txt  G_0.5.txt  G_0.55.txt  hist.py  plt.py
plt/leps/: leps.py
plt/quiver/: quiver.cpp  quiver.py
plt/sort/: sort.py  sort.test.cpp
plt/vac_diff/: divac.py  mono.py  plot.py  plot2.py  trivac.py
plt/vac_hist/: hist.py  raw.txt  raw1.txt  raw2.txt  rawA.txt  rawAboost0.5.txt  rawB.txt
python/: 2dplot.py  leps.py
python/leps/: leps.py
src/: 2d.test.cpp  2d_pot.hpp  Box.hpp  Canon.hpp  Canon2.hpp  Catalog.hpp  Catalog2.hpp  Cbuff.hpp  Cell.hpp  Cell2.hpp  Classes.hpp  Colour.hpp  ColourNauty.hpp  Dimer.hpp  DumpXYX.hpp  EAM.hpp  Force.hpp  Force2.hpp  Forces.hpp  Forces2.hpp  FuncEAM.hpp  GhostLCL.hpp  Inerta.hpp  L_BFGS.hpp  L_BFGS.test.cpp  Minimise.hpp  Nauty.hpp  NautyFunc.hpp  Rdf.hpp  Rotor.hpp  Sort.hpp  Spline.hpp  Superbasin.hpp  Topo.hpp  Vacancy.hpp  colour.hpp  colour.test.cpp  diffusion.cpp  dimer.hpp  dimer.test.cpp  (+11 more)
src/GPU/: Array.hpp  EAM.hpp  Forces2.hpp  Spline.hpp  array.test.cu  mtp  test.cu
src/old/: Canon.hpp  Catalog.hpp  Cell.hpp  Colour.hpp  Forces.hpp  ForcesV.hpp  FuncCacheEAM.hpp  GhostForce.hpp  GhostLCL.hpp  GhostLCL_half.hpp  L_BFGS.test.cpp  RdfCanon.hpp  Topo.hpp  colour.test.cpp  scale.debug.cpp  sort.test.cpp  time.hpp  vmd.test.cpp
